# kubecmd

./: README.md  pyproject.toml
kubecmd/: api.py  cli.py
